# eoc-infra

./: README.md  SPEC.md  pyproject.toml
src/eoc/core/: __init__.py  decorators.py  exceptions.py  trial.py
src/eoc_infra/: main.py
src/eoc_libraries/: __init__.py
