# This file is a part of the source code for eoc-libraries.
# This project has been licensed under the MIT license.
# Copyright (c) 2025-present pygame-community


[project]
name = "eoc-libraries"
version = "0.1.0"
description = "A monorepo of libraries for the Era of Challenges event."
requires-python = ">=3.12"
dependencies = [
    "eoc.cli @ git+https://github.com/pygame-community/eoc-libraries.git#subdirectory=packages/eoc.cli",
    "eoc.core @ git+https://github.com/pygame-community/eoc-libraries.git#subdirectory=packages/eoc.core",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]

[tool.uv.sources]
"eoc.cli" = { workspace = true }
"eoc.core" = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[project.optional-dependencies]
dev = ["pytest~=8.3.4", "pytest-cov~=6.0.0", "ruff~=0.14.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eoc_infra"]

[tool.hatch.metadata]
allow-direct-references = true

# Use Ruff to replace Black, isort, and Flake8
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by ruff format
    "B008", # do not perform function calls in argument defaults
    "B028", # No explicit `stacklevel` keyword argument found (?)
    "C901", # too complex
]

unfixable = ["B"] # Don't bother trying to fix flake8-bugbear

# Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]


[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 4.16.0
envlist = py312,format,lint,tests

[testenv]
skip_install = True
install_command = pip install -U {opts} {packages}
setenv = VIRTUAL_ENV={envdir}
deps = -r{toxinidir}/requirements.txt
       -r{toxinidir}/requirements-test.txt
       -r{toxinidir}/requirements-dev.txt

[testenv:tests]
deps =
    {[testenv]deps}
    pytest
commands = pytest src --doctest-modules --cov=src

[testenv:format]
deps = ruff
commands = ruff format --check .

[testenv:lint]
deps = ruff
commands = ruff check .

[testenv:ruff]
description = Run Ruff for linting and formatting
deps = ruff
commands =
    ruff format --check .
    ruff check .
"""
